# museum-api-service/api/controllers/location-controller.js
@@ -1,4 +1,4 @@
-'use strict';
+"use strict";
 /*
  'use strict' is not required but helpful for turning syntactical errors into true errors in the program flow
  https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode
@@ -9,9 +9,9 @@
  using 'require' statements that give you a reference to the module.
   It is a good idea to list the modules that your application depends on in the package.json in the project root
  */
-var util = require('util');
-var faker = require('faker');
-const jsf = require('json-schema-faker');
+var util = require("util");
+var faker = require("faker");
+const jsf = require("json-schema-faker");
 
 /*
  Once you 'require' a module you can reference the things that it exports.  These are defined in module.exports.
@@ -23,7 +23,7 @@ const jsf = require('json-schema-faker');
   we specify that in the exports of this module that 'hello' maps to the function named 'hello'
  */
 module.exports = {
-  locations: getLocations
+  locations: getLocations,
 };
 
 /*
@@ -33,25 +33,22 @@ module.exports = {
  */
 function getLocations(req, res) {
   // this sends back a JSON response which is a single string
-  res.json([{
+  res.json([
+    {
+      country1: "" + faker.address.country(),
+      city1: "" + faker.address.city(),
+      street1: "" + faker.address.streetName(),
+      address1: "" + faker.address.streetAddress(),
 
-    
-    "country1": "" + faker.address.country(),
-    "city1":"" + faker.address.city(),
-    "street1":"" + faker.address.streetName(),
-    "address1":"" + faker.address.streetAddress(),
-    "image1": "" + faker.image.city(),
+      country2: "" + faker.address.country(),
+      city2: "" + faker.address.city(),
+      street2: "" + faker.address.streetName(),
+      address2: "" + faker.address.streetAddress(),
 
-    "country2": "" + faker.address.country(),
-    "city2":"" + faker.address.city(),
-    "street2":"" + faker.address.streetName(),
-    "address2":"" + faker.address.streetAddress(),
-    "image2": "" + faker.image.city(),
-
-    "country3": "" + faker.address.country(),
-    "city3":"" + faker.address.city(),
-    "street3":"" + faker.address.streetName(),
-    "address3":"" + faker.address.streetAddress(),
-    "image3": "" + faker.image.city(),
-  }]);
+      country3: "" + faker.address.country(),
+      city3: "" + faker.address.city(),
+      street3: "" + faker.address.streetName(),
+      address3: "" + faker.address.streetAddress(),
+    },
+  ]);
 }
