# museum-react-app/src/App.js
@@ -27,84 +27,41 @@ function App() {
             </li>
 
             <li>
-              <Link to="/about">About</Link>
+              <Link to="/paint">Paints</Link>
             </li>
 
             <li>
-              <Link to="/paint">Paints</Link>
-            </li>
-    
-            <li>
               <Link to="/location">Location</Link>
             </li>
-  
+
             <li>
-              <Link to="/ticket">Weather today</Link>
+              <Link to="/ticket">Tickets</Link>
             </li>
-    
           </ul>
         </nav>
 
         <div className="App">
           <section>
             <Switch>
-              <Route path="/about">
-                <About />
-              </Route>
-
               <Route path="/paint">
                 <h1>Paints</h1>
                 <PaintTable />
               </Route>
-    
+
               <Route path="/location">
                 <h1>Museums locations</h1>
-                Click at the button to reload the page and see other museums!
                 <LocationTable />
               </Route>
-  
+
               <Route path="/ticket">
-                <h1>Weather Today</h1>
-                Click at the button to reload the page and see weather today!
+                <h1>Tickets</h1>
                 <TicketTable />
-              </Route>
-  
-
-              <Route path="/">
-                <h1>Home</h1>
-                Welcome to our service. Please explore our site!
-              </Route>
-
-              <Route path="*">
-                <NoMatch />
               </Route>
             </Switch>
           </section>
         </div>
       </div>
     </Router>
-  );
-}
-
-function NoMatch() {
-  let location = useLocation();
-
-  return (
-    <div>
-      <h3>
-        No match for <code>{location.pathname}</code>
-      </h3>
-    </div>
-  );
-}
-function About() {
-  let location = useLocation();
-
-  return (
-    <div>
-      <h2>About us</h2>
-      <p>Here is the description of the service and necessary terms.</p>
-    </div>
   );
 }
 
